<resources>
    <string name="app_name">EatShipperApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Домой</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Выход</string>
    <string name="your_name">Ваше имя</string>
    <string name="_13_00_pm">13 : 00 PM</string>
    <string name="order_number_123114512515212512">Order number: 123114512515212512</string>
    <string name="address_12351515125125125">Address: 12351515125125125</string>
    <string name="cash_on_delivery">Наличные</string>
    <string name="ship_now">Доставить</string>
    <string name="title_activity_shipping">ShippingActivity</string>
    <string name="date">Дата</string>
    <string name="aabcder">aabcder</string>
    <string name="name_arsya">Name: Arsya</string>
    <string name="address">Адрес</string>
    <string name="done">Готово</string>
    <string name="call">Позвонить</string>
    <string name="start_trip">Начать поездку</string>
    <string name="google_maps_key">AIzaSyAZ3DCYdVbTMSaFM735f3YSUnxr8Cm15_k</string>
    <string name="show">ПОКАЗАТЬ</string>
    <string name="restaurant_a">Restaurant a</string>
    <string name="_20_zagorodny_prospect_yo_sup">20 zagorodny prospect yo sup</string>
</resources>