<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_restaurant_menu_24"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_date"
                    android:text="@string/_13_00_pm"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_order_number"
                    android:text="@string/order_number_123114512515212512"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_order_address"
                    android:text="@string/address_12351515125125125"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txt_payment"
                    android:text="@string/cash_on_delivery"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_ship_now"
            android:text="@string/ship_now"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>